test/parsing/ferguson/formal-list-starts-comma.good
formal-list-starts-comma.chpl:1: syntax error: near ','
